Closed Bug 339957 Opened 19 years ago Closed 19 years ago

Possible to bring up a lot of concurrent context menus

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: hwaara, Assigned: jaas)

Details

Attachments

(2 files)

Firefox cocoa, trunk build from 20060531. It's possible to bring up a lot of context menus. It seems that some right-clicks don't cancel a currently-displayed context menu. To reproduce: 1. Right-click in the location bar 2. Right-click in the content area Repeat ad infinitum... For every iteration, one new context menu is displayed. Screenshot coming up.
I can confirm this bug
Status: NEW → ASSIGNED
Attached patch fix v1.0Splinter Review
The problem is that when we get native rightMouseDown messages, we don't do anything with popups like we do when we get mouseDown messages. We want to handle popups exactly the same, but in the case of rightMouseDown we don't want to return after rolling up since we still want to mouse click to go through to gecko (open another popup window, whatever).
Attachment #224898 - Flags: review?(mark)
Comment on attachment 224898 [details] [diff] [review] fix v1.0 noting control-click is broken, will file separately
Attachment #224898 - Flags: review?(mark) → review+
landed on trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: