fix popup rollup during right-click events, prevents us from allowing multiple popup windows (context menus) from opening at once. b=339957 r=mento